Fixed About Page Scrollbars

--- a/about/styles.css
+++ b/about/styles.css
@@ -86,7 +86,7 @@ section.creators>h2 {
   max-width: 100%;
   margin: auto;
   white-space: nowrap;
-  overflow: scroll;
+  overflow-x: scroll;
   padding: 0 0 0 20pt;
 }
 
